Classes migrated from nrt.jetty.

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
 	<properties>
 		<nutz.version>1.r.54</nutz.version>
+		<velocity.version>1.7</velocity.version>
 		<groovy.version>2.3.9</groovy.version>
 		<shiro.version>1.2.3</shiro.version>
 		<slf4j.version>1.7.9</slf4j.version>
@@ -51,4 +52,18 @@
 		<module>nutz-tpl-core</module>
 		<module>template-webapp</module>
 	</modules>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
