--- a/nutz-tpl-web/pom.xml
+++ b/nutz-tpl-web/pom.xml
@@ -7,4 +7,29 @@
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>nutz-tpl-web</artifactId>
+	
+	<dependencies>
+		<dependency>
+			<groupId>org.necros.nutz-tpl</groupId>
+			<artifactId>nutz-tpl-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>2.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+	</dependencies>
 </project>
