--- a/nutz-tpl-core/src/main/resources/NUTZ-MVC/velocity.properties
+++ b/nutz-tpl-core/src/main/resources/NUTZ-MVC/velocity.properties
@@ -5,9 +5,12 @@ directive.foreach.counter.initial.value=1
 
 resource.loader=classResourceLoader
 
-classResourceLoader.resource.loader.class=nrt.jetty.velocity.ClasspathSubfolderResourceLoader
+classResourceLoader.resource.loader.class=tpl.velocity.ClasspathSubfolderResourceLoader
 
 eventhandler.include.class=org.apache.velocity.app.event.implement.IncludeRelativePath
-userdirective=nrt.jetty.velocity.BundleDirective,nrt.jetty.velocity.TextDirective\
-              ,nrt.jetty.velocity.GroovyRunDirective,nrt.jetty.velocity.GroovyEmbedDirective\
-              ,nrt.jetty.velocity.GroovyIncludeDirective
+userdirective=tpl.velocity.BundleDirective,tpl.velocity.TextDirective\
+              ,tpl.velocity.GroovyRunDirective,tpl.velocity.GroovyEmbedDirective\
+              ,tpl.velocity.GroovyIncludeDirective,tpl.velocity.WidgetsDirective\
+              ,tpl.velocity.AsyncIncludeDirective\
+              ,tpl.shiro.velocity.AuthDirective,tpl.shiro.velocity.RememberedDirective\
+              ,tpl.shiro.velocity.SignedInDirective
