--- a/template-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/template-webapp/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,43 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app id="WebApp_ID" version="2.4"
+    xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
+
+	<filter>
+	   <filter-name>nutz</filter-name>
+	   <filter-class>org.nutz.mvc.NutFilter</filter-class>
+	   <init-param>
+	       <param-name>modules</param-name>
+	       <param-value>tpl.nutz.web.MainModule</param-value>
+	   </init-param>
+	</filter>
+	<filter-mapping>
+	   <filter-name>nutz</filter-name>
+	   <url-pattern>*.shtml</url-pattern>
+	</filter-mapping>
+	
+	<servlet>
+	   <servlet-name>groovyServlet</servlet-name>
+	   <servlet-class>tpl.nutz.web.GroovyVelocityServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+	   <servlet-name>groovyServlet</servlet-name>
+	   <url-pattern>*.html</url-pattern>
+	</servlet-mapping>
+    
+    <servlet>
+       <servlet-name>staticServlet</servlet-name>
+       <servlet-class>tpl.nutz.web.StaticServlet</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+       <servlet-name>staticServlet</servlet-name>
+       <url-pattern>/s/*</url-pattern>
+    </servlet-mapping>
 </web-app>
