--- a/template-webapp/pom.xml
+++ b/template-webapp/pom.xml
@@ -36,6 +36,11 @@
                 </exclusion>
 			</exclusions>
 		</dependency>
+        <dependency>
+            <groupId>org.necros.nutz-tpl</groupId>
+            <artifactId>nutz-tpl-admin</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 		<dependency>
 			<groupId>org.necros.nutz-tpl</groupId>
 			<artifactId>nutz-tpl-web</artifactId>
@@ -47,11 +52,21 @@
                 </exclusion>
             </exclusions>
 		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jcl-over-slf4j</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>log4j-over-slf4j</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+	    <dependency>
+	        <groupId>com.h2database</groupId>
+	        <artifactId>h2</artifactId>
+	        <version>1.3.173</version>
+	    </dependency>
 	</dependencies>
 
 	<build>
