--- a/template-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/template-webapp/src/main/webapp/WEB-INF/web.xml
@@ -8,18 +8,18 @@
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
-	<filter>
-	   <filter-name>nutz</filter-name>
-	   <filter-class>org.nutz.mvc.NutFilter</filter-class>
-	   <init-param>
-	       <param-name>modules</param-name>
-	       <param-value>tpl.nutz.web.MainModule</param-value>
-	   </init-param>
-	</filter>
-	<filter-mapping>
-	   <filter-name>nutz</filter-name>
-	   <url-pattern>*.shtml</url-pattern>
-	</filter-mapping>
+    <filter>
+       <filter-name>api</filter-name>
+       <filter-class>org.nutz.mvc.NutFilter</filter-class>
+       <init-param>
+           <param-name>modules</param-name>
+           <param-value>tpl.admin.api.MainModule</param-value>
+       </init-param>
+    </filter>
+    <filter-mapping>
+       <filter-name>api</filter-name>
+       <url-pattern>/api/*</url-pattern>
+    </filter-mapping>
 	
 	<servlet>
 	   <servlet-name>groovyServlet</servlet-name>
