Shiro sign-in is integrated into admin console.

--- a/nutz-tpl-core/pom.xml
+++ b/nutz-tpl-core/pom.xml
@@ -35,6 +35,11 @@
             <version>${shiro.version}</version>
         </dependency>
         <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.0.1</version>
