Defined data source definition page.

--- a/template-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/template-webapp/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,7 @@
         <param-name>tpl-startup-runners</param-name>
         <param-value>
             coreDataStartupRunner
+            extraDaoInitializer
             administrativeAccountStartupChecker
         </param-value>
     </context-param>
