Implemented runtime Dao builder.

--- a/nutz-tpl-core/pom.xml
+++ b/nutz-tpl-core/pom.xml
@@ -30,6 +30,11 @@
             <version>${shiro.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.0.16</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-web</artifactId>
             <version>${shiro.version}</version>
