--- a/template-webapp/pom.xml
+++ b/template-webapp/pom.xml
@@ -72,6 +72,11 @@
 			<artifactId>druid</artifactId>
 			<version>1.0.16</version>
 		</dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.38</version>
+        </dependency>
 	</dependencies>
 
 	<build>
