Added pages and sections menu item.

--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/menu.properties
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/menu.properties
@@ -4,3 +4,6 @@ menu.ds=Data Sources
 menu.dict=Dictionary
 menu.menues=Menu
 menu.msgs=Messages
+menu.res=Resources
+menu.res.pages=Pages
+menu.res.sections=Sections
