Added entities-manager menu item to administrative console.

--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/menu.properties
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/menu.properties
@@ -7,5 +7,6 @@ menu.msgs=Messages
 menu.res=Resources
 menu.res.pages=Pages
 menu.res.sections=Sections
+menu.entities=Entities
 menu.entities.builtin=Built-in entities
 menu.builtin.accounts=Accounts
