Added org module.

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
 		<module>nutz-tpl-core</module>
 		<module>template-webapp</module>
 		<module>nutz-tpl-admin</module>
+		<module>nutz-tpl-org</module>
 	</modules>
 	
 	<build>
